--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "framer-motion": "^10.16.4",
     "gsap": "^3.12.2",
+    "motion": "^10.16.4",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
