--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.26",
     "framer-motion": "^10.16.4",
     "gsap": "^3.12.2",
     "motion": "^10.16.4",
