--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gsap": "^3.12.2",
     "motion": "^10.16.4",
     "next": "latest",
+    "plaiceholder": "^3.0.0",
     "react": "latest",
     "react-dom": "latest",
     "sass": "^1.68.0",
