--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "@studio-freight/lenis": "^1.0.26",
+    "axios": "^1.5.1",
     "framer-motion": "^10.16.4",
     "gsap": "^3.12.2",
     "motion": "^10.16.4",
